// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LivePointStatus matches base snapshot 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-end",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ff0000",
        "width": "80%",
      }
    }
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "margin": 6,
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 18,
            "height": 36,
            "width": 36,
          },
          false,
          undefined,
        ],
      ]
    }
    testID="undo-button"
  >
    <View>
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "color": "#ffd600",
              "fontSize": 24,
            },
            Array [
              Object {
                "lineHeight": 24,
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰕌
      </Text>
    </View>
  </View>
</View>
`;

exports[`LivePointStatus matches snapshot while loading 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-end",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#ff0000",
        "width": "80%",
      }
    }
  />
  <ActivityIndicator
    color="#ffd600"
    size="small"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 6,
        "left": 6,
        "right": 6,
        "top": 6,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "margin": 6,
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 18,
            "height": 36,
            "width": 36,
          },
          Object {
            "opacity": 0.32,
          },
          undefined,
        ],
      ]
    }
    testID="undo-button"
  >
    <View>
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "color": "#ffd600",
              "fontSize": 24,
            },
            Array [
              Object {
                "lineHeight": 24,
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰕌
      </Text>
    </View>
  </View>
</View>
`;
